# Kitowall

./: .env  .gitignore  BOOTSTRAP_FLATPAK_BUILD_DEPS.sh  BUILD_FLATPAK_FROMSOURCE.sh  BUILD_FLATPAK_INTEGRATED_LOCAL.sh  CODEX_RESUME.md  CONFIG_EXAMPLES.md  DEPENDENCIES.md  GENERATE_FLATHUB_SOURCES.sh  INSTALL_FLATPAK.sh  LICENSE  LICENSE.md  NOTICE.md  PHASES.md  PHASES_ES.md  PROPUESTAS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.0.0.md  STABILITY_CHECKLIST.md  STATUS.md  TEST_COMMANDS.sh  TRADEMARKS.md  UNINSTALL_FLATPAK.sh  chatgpt.txt  chatgpt_cinco.txt  chatgpt_cuatro.txt  chatgpt_dos.txt  chatgpt_tres.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-appimage.yml  notify-flatpak.yml  publish-npm.yml  release-on-main.yml
fixtures/we/: get-details.json  query-files.json
flatpak/: README.md  io.kitotsu.KitoWall.flathub.yml  io.kitotsu.KitoWall.integrated.local.yml  io.kitotsu.KitoWall.local.yml  io.kitotsu.KitoWall.metainfo.xml  io.kitotsu.KitoWall.yml  prepare.sh
flatpak/generated-sources/: README.md  node-deps-ui.json  ui-package-lock.json
issues/: flatpak-watch-service-failed.md
scripts/: bootstrap-host.sh  release-github.sh  sync-ui-version.sh
src/: cli.ts
src/adapters/: genericJson.ts  localFolder.ts  reddit.ts  remoteBase.ts  selector.ts  staticUrl.ts  (+2 more)
tests/: live.test.js  regression.e2e.sh  smoke.e2e.sh
ui/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
(+80 files in other folders)
