[package]
name = "hyprwall-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = ["protocol-asset"] }
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
